--- a/src/app/Returns/mailtype-returns/mailtype-returns.component.html
+++ b/src/app/Returns/mailtype-returns/mailtype-returns.component.html
@@ -1,64 +1,66 @@
-<table class="table mailTypeTable table-striped table-bordered" cellspacing="0" width="100%">
-  <thead class='mailTypeTableHeader' style='text-decoration: underline;'>
-    <tr>
-      <th></th>
-      <th>Mail Type</th>
-      <th>Mailed</th>
-      <th>Caged</th>
-      <th>Quantity</th>
-      <th>Donors</th>
-      <th>Non</th>
-      <th>New</th>
-      <th>RSP</th>
-      <th>AVG</th>
-      <th>Gross</th>
-      <th>Cost</th>
-      <th>Net</th>
-      <th>GPP</th>
-      <th>CLM</th>
-      <th>NLM</th>
-      <th>IO</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let mailType of MailTypeList">
-      <td class='btnCol mdetails-control'></td>
-      <td>{{ mailType?.MailType }}</td>
-      <td>{{ mailType?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ mailType?.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ mailType?.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ mailType?.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ mailType?.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ mailType?.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ mailType?.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ mailType?.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ mailType?.Measure.IO | number : '1.0-2' }}</td>
-    </tr>
-  </tbody>
-  <tfoot class='clientTableFooter'>
-    <tr>
-      <td colspan="2">TOTAL {{ RootReturns?.Client | uppercase }}</td>
-      <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ RootReturns?.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ RootReturns?.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ RootReturns?.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ RootReturns?.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ RootReturns?.Measure.IO | number : '1.0-2' }}</td>
-    </tr>
-  </tfoot>
-</table>
+<div class="mailtypediv">
+  <table class="table mailTypeTable table-striped table-bordered" cellspacing="0" width="100%">
+    <thead class='mailTypeTableHeader' style='text-decoration: underline;'>
+      <tr>
+        <th></th>
+        <th>Mail Type</th>
+        <th>Mailed</th>
+        <th>Caged</th>
+        <th>Quantity</th>
+        <th>Donors</th>
+        <th>Non</th>
+        <th>New</th>
+        <th>RSP</th>
+        <th>AVG</th>
+        <th>Gross</th>
+        <th>Cost</th>
+        <th>Net</th>
+        <th>GPP</th>
+        <th>CLM</th>
+        <th>NLM</th>
+        <th>IO</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let mailType of MailTypeList">
+        <td class='btnCol mdetails-control'></td>
+        <td>{{ mailType?.MailType }}</td>
+        <td>{{ mailType?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+        <td>{{ mailType?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+        <td>{{ mailType?.Measure.Quantity | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.Donors | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.NonDonors | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.NewDonors | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.RSP | percent:'1.2-2'}}</td>
+        <td>{{ mailType?.Measure.AVG | number : '1.0-2' }}</td>
+        <td>{{ mailType?.Measure.Gross | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.Cost | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.Net | number : '1.0-0' }}</td>
+        <td>{{ mailType?.Measure.GPP | number : '1.0-2' }}</td>
+        <td>{{ mailType?.Measure.CLM | number : '1.0-2' }}</td>
+        <td>{{ mailType?.Measure.NLM | number : '1.0-2' }}</td>
+        <td>{{ mailType?.Measure.IO | number : '1.0-2' }}</td>
+      </tr>
+    </tbody>
+    <tfoot class='clientTableFooter'>
+      <tr>
+        <td colspan="2">TOTAL {{ RootReturns?.Client | uppercase }}</td>
+        <td>{{ RootReturns?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+        <td>{{ RootReturns?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+        <td>{{ RootReturns?.Measure.Quantity | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.Donors | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.NonDonors | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.NewDonors | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.RSP | percent:'1.2-2'}}</td>
+        <td>{{ RootReturns?.Measure.AVG | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.Gross | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.Cost | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.Net | number : '1.0-0' }}</td>
+        <td>{{ RootReturns?.Measure.GPP | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.CLM | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.NLM | number : '1.0-2' }}</td>
+        <td>{{ RootReturns?.Measure.IO | number : '1.0-2' }}</td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
