--- a/src/app/Returns/phase-returns/phase-returns.component.html
+++ b/src/app/Returns/phase-returns/phase-returns.component.html
@@ -1,65 +1,67 @@
-<table class="table phaseTable table-striped table-bordered" cellspacing="0" width="100%">
-  <thead class='phaseTableHeader' style='text-decoration: underline;'>
-    <tr>
-      <th></th>
-      <th>Phase</th>
-      <th>Mailed</th>
-      <th>Caged</th>
-      <th>Quantity</th>
-      <th>Donors</th>
-      <th>Non</th>
-      <th>New</th>
-      <th>RSP</th>
-      <th>AVG</th>
-      <th>Gross</th>
-      <th>Cost</th>
-      <th>Net</th>
-      <th>GPP</th>
-      <th>CLM</th>
-      <th>NLM</th>
-      <th>IO</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let phase of PhaseList">
-      <td class='btnCol pdetails-control'>
-      </td>
-      <td>{{ phase?.PhaseName }}</td>
-      <td>{{ phase?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ phase?.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ phase?.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ phase?.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ phase?.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ phase?.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ phase?.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ phase?.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ phase?.Measure.IO | number : '1.0-2' }}</td>
-    </tr>
-  </tbody>
-  <tfoot class='campaignTableFooter'>
-    <tr>
-      <td colspan="2">TOTAL {{ Campaign?.CampaignName | uppercase }}</td>
-      <td>{{ Campaign?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
-      <td>{{ Campaign?.Measure.Caged | date: 'MM/dd/yy' }}</td>
-      <td>{{ Campaign?.Measure.Quantity | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.Donors | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.NonDonors | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.NewDonors | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.RSP | percent:'1.2-2'}}</td>
-      <td>{{ Campaign?.Measure.AVG | number : '1.0-2' }}</td>
-      <td>{{ Campaign?.Measure.Gross | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.Cost | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.Net | number : '1.0-0' }}</td>
-      <td>{{ Campaign?.Measure.GPP | number : '1.0-2' }}</td>
-      <td>{{ Campaign?.Measure.CLM | number : '1.0-2' }}</td>
-      <td>{{ Campaign?.Measure.NLM | number : '1.0-2' }}</td>
-      <td>{{ Campaign?.Measure.IO | number : '1.0-2' }}</td>
-    </tr>
-  </tfoot> 
-</table>
+<div class="phasediv">
+  <table class="table phaseTable table-striped table-bordered" cellspacing="0" width="100%">
+    <thead class='phaseTableHeader' style='text-decoration: underline;'>
+      <tr>
+        <th></th>
+        <th>Phase</th>
+        <th>Mailed</th>
+        <th>Caged</th>
+        <th>Quantity</th>
+        <th>Donors</th>
+        <th>Non</th>
+        <th>New</th>
+        <th>RSP</th>
+        <th>AVG</th>
+        <th>Gross</th>
+        <th>Cost</th>
+        <th>Net</th>
+        <th>GPP</th>
+        <th>CLM</th>
+        <th>NLM</th>
+        <th>IO</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let phase of PhaseList">
+        <td class='btnCol pdetails-control'>
+        </td>
+        <td>{{ phase?.PhaseName }}</td>
+        <td>{{ phase?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+        <td>{{ phase?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+        <td>{{ phase?.Measure.Quantity | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.Donors | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.NonDonors | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.NewDonors | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.RSP | percent:'1.2-2'}}</td>
+        <td>{{ phase?.Measure.AVG | number : '1.0-2' }}</td>
+        <td>{{ phase?.Measure.Gross | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.Cost | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.Net | number : '1.0-0' }}</td>
+        <td>{{ phase?.Measure.GPP | number : '1.0-2' }}</td>
+        <td>{{ phase?.Measure.CLM | number : '1.0-2' }}</td>
+        <td>{{ phase?.Measure.NLM | number : '1.0-2' }}</td>
+        <td>{{ phase?.Measure.IO | number : '1.0-2' }}</td>
+      </tr>
+    </tbody>
+    <tfoot class='campaignTableFooter'>
+      <tr>
+        <td colspan="2">TOTAL {{ Campaign?.CampaignName | uppercase }}</td>
+        <td>{{ Campaign?.Measure.Mailed | date: 'MM/dd/yy'}}</td>
+        <td>{{ Campaign?.Measure.Caged | date: 'MM/dd/yy' }}</td>
+        <td>{{ Campaign?.Measure.Quantity | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.Donors | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.NonDonors | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.NewDonors | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.RSP | percent:'1.2-2'}}</td>
+        <td>{{ Campaign?.Measure.AVG | number : '1.0-2' }}</td>
+        <td>{{ Campaign?.Measure.Gross | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.Cost | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.Net | number : '1.0-0' }}</td>
+        <td>{{ Campaign?.Measure.GPP | number : '1.0-2' }}</td>
+        <td>{{ Campaign?.Measure.CLM | number : '1.0-2' }}</td>
+        <td>{{ Campaign?.Measure.NLM | number : '1.0-2' }}</td>
+        <td>{{ Campaign?.Measure.IO | number : '1.0-2' }}</td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
