--- a/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
+++ b/src/app/Utilities_Pages/pdf-upload/pdf-upload.component.html
@@ -5,7 +5,6 @@
   <mat-card class="mat-elevation-z8">
 
     <div class="row">
-
       <div class="col-md-6">
         <mat-form-field appearance="outline" class="selectionElement">
           <mat-chip-list #CLchipList>
@@ -25,15 +24,15 @@
       </div>
 
       <div class="col-md-3">
-        <mat-form-field class="selectionElement">
-          <input matInput required #startDateInput (dateInput)="changeDate()" [matDatepicker]="startDatePicker" [(ngModel)]="startDate"
-            placeholder="start date">
+        <mat-form-field class="selectionElement" appearance="outline">
+          <input matInput required #startDateInput (dateInput)="changeDate()" [matDatepicker]="startDatePicker"
+            [(ngModel)]="startDate" placeholder="start date">
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
         </mat-form-field>
       </div>
       <div class="col-md-3">
-        <mat-form-field class="selectionElement">
+        <mat-form-field class="selectionElement" appearance="outline">
           <input matInput required #endDateInput (dateInput)="changeDate()" [matDatepicker]="endDatePicker" [(ngModel)]="endDate"
             placeholder="end date">
           <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
@@ -46,64 +45,70 @@
     <div style="width:100%; height: 4px;">
       <mat-progress-bar color="accent" mode="indeterminate" *ngIf="loading == true"></mat-progress-bar>
     </div>
+    <div class="row" *ngIf="loading == false">
+      <div class="col-12">
+        <h4>PDF Reporting on {{packageCount}} packages</h4>
+        <br>
+      </div>
+    </div>
+
 
     <div class="row" *ngIf="loading == false">
-      <table mat-table [dataSource]="tableData" matSort (matSortChange)="SortFunction($event, tableData)">
-        <ng-container matColumnDef="PackageName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Phase Name</th>
-          <td mat-cell *matCellDef="let element">{{element.PhaseName}}</td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-        <ng-container matColumnDef="Client">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Client </th>
-          <td mat-cell *matCellDef="let element"> {{element.gClientAcronym}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Mail Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.MailDate|date:'shortDate'}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Description">
-          <th mat-header-cell *matHeaderCellDef> Package Title </th>
-          <td mat-cell *matCellDef="let element"> {{element.PhaseTitle}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Link">
-          <th mat-header-cell *matHeaderCellDef>
-            <span>PDF Link</span>
-            <!-- <button mat-icon-button><i class="material-icons" (click)="pdfSelect.toggle()">filter_list</i>
-            </button>
-            <mat-form-field>
-                <mat-select #pdfSelect [formControl]="pdfPresence" multiple>
-                  <mat-option [value]="1">PDF</mat-option>
-                  <mat-option [value]="2">None</mat-option>
-                </mat-select>
-              </mat-form-field> -->
-            <button mat-icon-button [matMenuTriggerFor]="pdfOptions"><i class="material-icons">filter_list</i>
-            </button>
-            <mat-menu #pdfOptions>
-              <button mat-menu-item value="PDF" (click)="changePDFType($event)">With PDF</button>
-              <button mat-menu-item value="None" (click)="changePDFType($event)">Without PDF</button>
-              <button mat-menu-item value="Both" (click)="changePDFType($event)">All</button>
-            </mat-menu>
-          </th>
-          <td mat-cell *matCellDef="let element">
-            <a *ngIf="element.HasPDF == true" href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{element.PhaseID}}"
-              target="_blank"><i class="material-icons">launch</i></a>
-            <span *ngIf="element.HasPDF == false">None</span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="ButtonControl">
-          <th mat-header-cell *matHeaderCellDef class="ButtonContcontrolColumnrolCell"></th>
-          <td mat-cell *matCellDef="let element" class="controlColumn">
-            <button mat-icon-button *ngIf="element.ShowControl" (click)="fileInput.click()" id="uploadBtn" [title]="element.HasPDF? 'Replace PDF':'Upload PDF'" class="controlColumnBtn"><i class="material-icons">note_add</i></button>
-            <button mat-icon-button *ngIf="element.ShowControl" (click)="removePDF()" title="Remove PDF" class="controlColumnBtn"><i class="material-icons">delete</i></button>
-            <input #fileInput type="file" (change)="onFileChange($event)" multiple="false" style="display:none;" />
-          </td>
-        </ng-container>
+      <div class="col-12">
+        <table mat-table [dataSource]="tableData" matSort (matSortChange)="SortFunction($event, tableData)">
+          <ng-container matColumnDef="PackageName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Phase Name</th>
+            <td mat-cell *matCellDef="let element">{{element.PhaseName}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="Client">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Client </th>
+            <td mat-cell *matCellDef="let element"> {{element.gClientAcronym}} </td>
+          </ng-container>
+          <ng-container matColumnDef="Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Mail Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.MailDate|date:'shortDate'}} </td>
+          </ng-container>
+          <ng-container matColumnDef="Description">
+            <th mat-header-cell *matHeaderCellDef> Package Title </th>
+            <td mat-cell *matCellDef="let element"> {{element.PhaseTitle}} </td>
+          </ng-container>
+          <ng-container matColumnDef="Link">
+            <th mat-header-cell *matHeaderCellDef>
+              <span>PDF Link</span>
+              <button mat-icon-button [matMenuTriggerFor]="pdfOptions"><i class="material-icons">filter_list</i>
+              </button>
+              <mat-menu #pdfOptions>
+                <button mat-menu-item>
+                  <mat-checkbox (click)="[$event.stopPropagation(), changePDFType('PDF')]" checked="true">With PDF</mat-checkbox>
+                </button>
+                <button mat-menu-item>
+                  <mat-checkbox (click)="[$event.stopPropagation(), changePDFType('None')]" checked="true">Without PDF</mat-checkbox>
+                </button>
+              </mat-menu>
+            </th>
+            <td mat-cell *matCellDef="let element">
+              <a *ngIf="element.HasPDF == true" href="https://sd360.sunrisedataservices.com/api/LoadPDF?PhaseID={{element.PhaseID}}"
+                target="_blank"><i class="material-icons">launch</i></a>
+              <span *ngIf="element.HasPDF == false">None</span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="ButtonControl">
+            <th mat-header-cell *matHeaderCellDef class="ButtonContcontrolColumnrolCell"></th>
+            <td mat-cell *matCellDef="let element" class="controlColumn">
+              <button mat-icon-button *ngIf="element.ShowControl" (click)="fileInput.click()" id="uploadBtn" [title]="element.HasPDF? 'Replace PDF':'Upload PDF'"
+                class="controlColumnBtn"><i class="material-icons">note_add</i></button>
+              <button mat-icon-button *ngIf="element.ShowControl" (click)="removePDF()" title="Remove PDF" class="controlColumnBtn"><i
+                  class="material-icons">delete</i></button>
+              <input #fileInput type="file" (change)="onFileChange($event)" multiple="false" style="display:none;" />
+            </td>
+          </ng-container>
 
-
-        <tr mat-header-row *matHeaderRowDef="MainDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: MainDisplayedColumns;" [ngClass]="row.Hidden? 'collapseRow':'defaultRow'" (mouseenter)="hoverRow(row)" (mouseleave)="hoverRow(row)"></tr><!--(mouseenter)="hoverRow(row)" (mouseleave)="hoverLeave(row)"-->
-      </table>
+          <tr mat-header-row *matHeaderRowDef="MainDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: MainDisplayedColumns;" [ngClass]="row.Hidden? 'collapseRow':'defaultRow'"
+            (mouseenter)="hoverRow(row)" (mouseleave)="hoverRow(row)"></tr>
+        </table>
+      </div>
 
     </div>
   </mat-card>
